# design-patterns-for-parser-combinators

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.freeze  design-patterns-for-parser-combinators.cabal
.github/workflows/: ci.yaml
main/: Main.hs
src/: AST.hs  Convert.hs  Interpreter.hs  Lexer.hs  Main.hs  Miniparsec.lhs  Parser.hs  Pretty.hs  StrongAST.hs  WeakAST.hs
src/Miniparsec/: Impl.lhs
test/common/: Arbitrary.hs
test/convert/: Main.hs
test/parser/: Main.hs
