cabal-version:      3.4
name:               design-patterns-for-parser-combinators
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

license:            BSD-3-Clause
license-file:       LICENSE
author:             Jamie Willis and Nicolas Wu
maintainer:         j.willis19@imperial.ac.uk

extra-source-files: CHANGELOG.md

executable design-patterns-for-parser-combinators
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Miniparsec,
                      Miniparsec.Impl,
                      AST,
                      Interpreter,
                      Parser

    build-depends:    base ^>=4.14.2.0,
                      selective,
                      containers
    hs-source-dirs:   src
    default-language: Haskell2010
