cabal-version:      3.4
name:               calculator-lib
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

license:            BSD-3-Clause
license-file:       LICENSE
author:             Jamie Willis and Nicolas Wu
maintainer:         j.willis19@imperial.ac.uk

extra-source-files: CHANGELOG.md

library
    exposed-modules:  Miniparsec,
                      Miniparsec.Impl,
                      WeakAST,
                      StrongAST,
                      Pretty,
                      Convert,
                      Interpreter,
                      Parser,
                      Lexer

    build-depends:    base ^>=4.14.2.0,
                      selective,
                      containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable calculator
    main-is:          Main.hs
    hs-source-dirs:   main
    build-depends:    base ^>=4.14.2.0,
                      calculator-lib

test-suite parser-test
  type:                exitcode-stdio-1.0
  build-depends:       base ^>=4.14.2.0,
                       calculator-lib,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck
  main-is:             Main.hs
  hs-source-dirs:      test/parser
                       test/common
  other-modules:       Arbitrary
  default-language:    Haskell2010

test-suite convert-test
  type:                exitcode-stdio-1.0
  build-depends:       base ^>=4.14.2.0,
                       calculator-lib,
                       tasty,
                       tasty-quickcheck
  main-is:             Main.hs
  hs-source-dirs:      test/convert
                       test/common
  other-modules:       Arbitrary
  default-language:    Haskell2010